Update author label to Ukrainian and rename markdown file for clarity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const formatDate = (date: Date) => {
                                     <p class="post-description">{post.data.description}</p>
                             )}
                             <div class="post-meta">
-                                <span class="author">By {post.data.author}</span>
+                                <span class="author">Від {post.data.author}</span>
                                 {post.data.tags && (
                                         <div class="tags">
                                             {post.data.tags.map((tag) => (
